New Style and Responsive

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
     {{>header}}
 
-    <p>Get your weather here</p>
+    <p>Enter your location and discover the weather for that place 🤓</p>
     <form>
         <input placeholder="Location">
         <br>
