--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     text-align: center;
+    font-size: 1.5em;
 }
 
 .main-content {
@@ -18,31 +19,36 @@ body {
 footer {
     background: #333333;
     color: #FFFFFF;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    margin-top: 20px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 200px;
     text-align: center;
-    border-top: 4px solid #9774CC ;
+    border-top: 8px solid #9774CC ;
     bottom:0;
     position: absolute;
     width: 100%;
+    font-size: 1.3em;
 }
 
 header {
-    margin-top: 16px;
-    margin-bottom: 48px;
+    top: 0;
+    margin-bottom: 64px;
     text-align: center;
+    background-color: #333333;
+    padding: 2vh;
 }
 
 h1 {
-    font-size: 64px;
+    font-size: 4em;
     margin-bottom: 16px;
+    color: #9774CC;
 }
 
 header a {
     color: #888888;
     margin-right: 16px;
     text-decoration: none;
+    font-size: 2vh;
 }
 
 .portrait {
@@ -56,7 +62,11 @@ input {
     border: 1px solid transparent;
     padding: 8px;
     box-shadow: 0 1px 4px;
+    font-size: 1.3em;
+}
 
+::placeholder {
+    text-align: center;
 }
 
 button {
@@ -68,4 +78,5 @@ button {
     padding: 8px;
     margin: 20px;
     box-shadow: 0 1px 4px;
+    font-size: 1.3em;
 }
