--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Created by: <span style="color: #9774CC;">{{name}}</span></p>
+    <p>Created by: <span style="color: #9774CC; font-weight:bolder;">{{name}}</span></p>
 </footer>
