--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,15 +61,17 @@ header a {
 }
 
 input {
-    border: 1px solid transparent;
+    border: 4px solid #9774CC;
     padding: 8px;
-    box-shadow: 0 1px 4px;
     font-size: 2.5vh;
     text-align: center;
+    color: #9774CC;
 }
 
 ::placeholder {
     text-align: center;
+    color: #9774CC;
+    opacity: 0.75;
 }
 
 button {
