--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
     {{>header}}
     <div></div>
     <img src="/img/me.png" class="portrait">
+    <p>This site was created by Rafael Ortiz. It uses data from mabpbox.com and weatherstack.com</p>
 </div>
     {{>footer}}
 
